fixes spacing issue in components

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,9 +1,13 @@
 .contact-container {
 	margin-top: 70px;
 	margin-bottom: 70px;
+	padding-top: 80px;
 	padding-left: 7rem;
 	padding-right: 7rem;
 	padding-bottom: 10rem;
+	@media (max-width: 990px) {
+		padding: 1rem;
+	}
 
 	@media (max-width: 550px) {
 		padding-left: 1rem;
@@ -41,35 +45,56 @@
 		}
 	}
 
-	.info-container {
-		margin-top: 50px;
-		.info {
-			display: flex;
-			align-items: center;
-			color: #96bb7c;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			i {
-				flex: 1;
-			}
-			span {
-				flex: 4;
+	.contact-info-container {
+		h4 {
+			@media (max-width: 550px) {
 				text-align: center;
 			}
 		}
-	}
-
-	.icon-container {
-		align-content: center;
-		display: flex;
-		justify-content: center;
-		font-size: 25px;
-
-		a {
-			margin-left: 5px;
-			margin-right: 5px;
-			i {
+		.info-container {
+			margin-top: 50px;
+			@media (max-width: 550px) {
+				padding-left: 2rem;
+				padding-right: 2rem;
+			}
+			.info {
+				display: flex;
+				align-items: center;
 				color: #96bb7c;
+				margin-top: 10px;
+				margin-bottom: 10px;
+				@media (max-width: 550px) {
+					justify-content: space-between;
+				}
+				i {
+					flex: 1;
+					@media (max-width: 550px) {
+						flex: none;
+					}
+
+				}
+				span {
+					flex: 4;
+					text-align: center;
+					@media (max-width: 550px) {
+						flex: none;
+					}
+				}
+			}
+		}
+
+		.icon-container {
+			align-content: center;
+			display: flex;
+			justify-content: center;
+			font-size: 25px;
+
+			a {
+				margin-left: 5px;
+				margin-right: 5px;
+				i {
+					color: #96bb7c;
+				}
 			}
 		}
 	}
