--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -2,6 +2,7 @@
 	margin-top: 70px;
 	margin-bottom: 70px;
 	padding: 6rem;
+	padding-top: 80px;
 	padding-left: 8rem;
 	padding-right: 8rem;
 	@media (max-width: 990px) {
